@@ -1,5 +1,10 @@
 2006-01-12  Danny Smith  <dannysmith@users.sourceforge.net>
 
+	* include/winsock2.h (struct sockaddr_storage):  Use RFC 2553
+	names for padding size constants.
+
+2006-01-12  Danny Smith  <dannysmith@users.sourceforge.net>
+
 	* include/aclapi.h (WINADVAPI): Add to prototypes.
 	* include/winreg.h (WINADVAPI): Likewise.
 	* include/winsvc.h (WINADVAPI): Likewise.
